[OPENMEETINGS-1773] saved WB import is fixed