@@ -402,6 +402,9 @@ public class BackupImport {
 
 		if (ver.compareTo(BackupVersion.get("4.0.0")) < 0) {
 			for (BaseFileItem bfi : files) {
+				if (bfi.isDeleted()) {
+					continue;
+				}
 				if (BaseFileItem.Type.Presentation == bfi.getType()) {
 					convertOldPresentation((FileItem)bfi);
 				}
@@ -465,7 +468,7 @@ public class BackupImport {
 			if (CONFIG_CRYPT.equals(c.getKey())) {
 				try {
 					Class<?> clazz = Class.forName(c.getValue());
-					clazz.newInstance();
+					clazz.getDeclaredConstructor().newInstance();
 				} catch (Exception e) {
 					log.warn("Not existing Crypt class found {}, replacing with SCryptImplementation", c.getValue());
 					c.setValue(SCryptImplementation.class.getCanonicalName());
